# finance_monytoring_system

./: README.md  app.py  pyproject.toml
data/: operations.csv
modules/: ai_advisor.py  analytics.py  charts.py  data_loader.py  forecasting.py  report_generator.py
