[project]
name = "finance-monitoring-system"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "openai>=2.8.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]
